<resources>
    <string name="app_name">Computer Shop Inventory</string>

    <string name="sale_button">Sale</string>

    <string name="empty_view_title_text">The shop\'s storage seems empty.</string>
    <string name="empty_view_subtitle_text">Get started by adding a component</string>
    <string name="category_overview">Overview</string>
    <string name="hint_component_name">Component name</string>
    <string name="hint_component_price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="placeholder_quantity">0</string>
    <string name="supplier">Supplier</string>
    <string name="hint_supplier_name">Supplier name</string>
    <string name="hint_supplier_email">Supplier email</string>
    <string name="order_more_button">Order more</string>
    <string name="change_image">Change image</string>
    <string name="delete_component_button">Delete component</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete all entries</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_activity_title_new_component">New component</string>
    <string name="editor_activity_title_edit_component">Edit component</string>

    <string name="editor_insert_component_successful">Component saved</string>
    <string name="editor_insert_component_failed">Error with saving component</string>
    <string name="editor_update_component_successful">Component updated</string>
    <string name="editor_update_component_failed">Error with updating component</string>
    <string name="please_fill_all_fields">Please fill all fields.</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="delete_dialog_msg">Delete this component?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="editor_delete_component_successful">Component deleted</string>
    <string name="editor_delete_component_failed">Error with deleting component</string>

    <string name="email_subject">Order</string>
    <string name="email_start">Dear </string>
    <string name="email_body_1">I would like to order 10 pcs of </string>
    <string name="email_body_2">Thank you!\n\nBest regards,\nAndroid Computer Shop</string>

    <string name="email_error_message">Some of the necessary fields are empty, it\'s not possible to send the order now.</string>

    <string name="toast_error_quantity">Quantity cannot be less than zero.</string>
    <string name="toast_error_sale">There was an error with the sale.</string>
</resources>
