<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".EditorActivity">

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_component_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_component_name"
                    android:inputType="textCapWords" />

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_component_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_component_price"
                    android:inputType="number" />

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/media" />

                <Button
                    android:id="@+id/change_image_button"
                    android:onClick="changeImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/change_image" />
            </LinearLayout>

        </LinearLayout>


        <!-- Quantity -->
        <LinearLayout
            android:id="@+id/container_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:paddingLeft="4dp">

                <Button
                    android:id="@+id/quantity_minus_button"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:onClick="decreaseQuantity"
                    android:text="@string/minus_sign" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    style="@style/EditorFieldStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/placeholder_quantity"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/quantity_plus_button"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:onClick="increaseQuantity"
                    android:text="@string/plus_sign" />
            </LinearLayout>
        </LinearLayout>

        <!-- Supplier -->
        <LinearLayout
            android:id="@+id/container_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/supplier" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_name"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/edit_supplier_email"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_email"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/order_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:onClick="orderMore"
            android:text="@string/order_more_button" />

    </LinearLayout>
</ScrollView>